Another commit and push

--- a/configuration.properties
+++ b/configuration.properties
@@ -7,6 +7,11 @@ target.url=https://demo.guru99.com/test/upload
 cydeo_hover_url=https://practice.cydeo.com/hovers
 cydeo.practice.url=https://practice.cydeo.com/upload
 etsy.url=https://www.etsy.com
+cydeo.practice.scroll=https://practice.cydeo.com/infinite_scroll
+cydeo.practice.large=https://practice.cydeo.com/large
+cydeo.practice.dragdrop=https://practice.cydeo.com/drag_and_drop_circles
+herokuapp=https://testpages.herokuapp.com/styled/file-upload-test.html
+
 
 # <- use this character to write comments
 #key has to be unique
